# ring_trap_nm

./: Experiment-min_energy-fixed_momentum-adaptive-set_starting_simplex.ipynb  Experiment-min_energy-fixed_momentum-adaptive.ipynb  Experiment-min_energy-fixed_momentum-random_search.ipynb  Experiment-min_energy-fixed_momentum-random_search.py  Experiment-min_energy-fixed_momentum.ipynb  Experiment-min_energy-fixed_momentum.py  README.md  pyproject.toml  setup.cfg
src/nelder_mead/: Ojbective.py
src/ring_trap_nm/nelder_mead/: HyperParamsOpt.py  Objective.py  StochasticInitPotentialSearch.py
src/ring_trap_nm/schrodinger/: Schrodinger1D.py
src/schrodinger/: Schrodinger1D.py
